# gazebo_simulation_ros2

./: CMakeLists.txt  README.md  package.xml
config/: fake_ros2_control.yaml  fake_ros_control.yaml  mycobot_move_group_controller.yaml
launch/: my_model_gazebo.launch.py  mycobot_gazebo_moveit.launch.py  mycobot_moveit.launch.py
models/my_model/: model.config  model.sdf
scripts/: slider_control.py
urdf/: joint1.stl  joint2.stl  joint3.stl  joint4.stl  joint5.stl  joint6.stl  joint7.stl  mycobot.trans  mycobot_280_m5.urdf  mycobot_280_m5.urdf.xacro  mycobot_280_m5_gazebo_config.xacro
world/: my_world.world
