<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_simulation_ros2</name>
  <version>0.0.0</version>
  <description>gazebo simulation ros2 package </description>

  <author>Fumiaki Abe</author>
  <author email="crowsky7275@gmail.com"></author>

  <maintainer email="crowsky7275@gmail.com">Fumiaki Abe</maintainer>

  <license>MIT</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>